k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-gitops-demo
  labels:
    app.kubernetes.io/name: flask-gitops-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flask-gitops-demo
  ports:
    - name: http
      port: 80
      targetPort: http
